--- a/todo-app/src/App.module.css
+++ b/todo-app/src/App.module.css
@@ -1,4 +1,17 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: rgb(235, 236, 236);
+}
+
+.App {
+  /* text-align: center; */
+  background-color: sandybrown;
+
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
 }
