--- a/todo-app/src/components/addTodo/AddTodo.module.css
+++ b/todo-app/src/components/addTodo/AddTodo.module.css
@@ -10,9 +10,11 @@
 }
 
 .todoInput {
+  display: flex;
+  justify-content: space-around;
+
   width: 100%;
   height: 40px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   padding: 0 10px;
   font-size: 16px;
@@ -20,5 +22,5 @@
 }
 
 h1 {
-  margin-bottom: 40px;
+  margin: 40px;
 }
