--- a/todo-app/src/components/addTodo/AddTodo.module.css
+++ b/todo-app/src/components/addTodo/AddTodo.module.css
@@ -9,6 +9,10 @@
   padding: 0 20px;
 }
 
+h1 {
+  margin: 40px;
+}
+
 .todoInput {
   display: flex;
   justify-content: space-around;
@@ -21,6 +25,26 @@
   margin-bottom: 20px;
 }
 
-h1 {
-  margin: 40px;
+input {
+  width: 350px;
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  border-bottom: 1px solid #000;
+}
+
+button {
+  width: 100px;
+  border-radius: 4px;
+  background: green;
+  border: none;
+  cursor: pointer;
+  font-size: 1.3rem;
+  padding: 5px 8px;
+  color: #353333;
+  transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+  background: #2ecc71;
 }
