--- a/react-website/src/components/nav/Nav.css
+++ b/react-website/src/components/nav/Nav.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   padding: 0 20px;
   height: 60px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
