--- a/react-website/src/components/nav/Nav.css
+++ b/react-website/src/components/nav/Nav.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 0 20px;
+  padding: 10px 20px;
   height: 60px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -22,6 +22,7 @@
 
 .nav__links {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   list-style: none;
   padding: 0;
@@ -30,4 +31,22 @@
 
 .nav__link {
   margin: 0 10px;
+}
+
+button {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #d8f8ee;
+  padding: 10px 20px;
+  margin-left: 45px;
+  border-radius: 8rem;
+  background-color: transparent;
+  border: 1px solid #d8f8ee;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+button:hover {
+  background-color: #d8f8ee;
+  color: #09050d;
 }
