--- a/course-work/src/App.css
+++ b/course-work/src/App.css
@@ -5,8 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  background: #111;
-  color: #f5f5f5;
+  /* background: #fff; */
+  color: #111;
 }
 
 .container {
