--- a/course-work/src/components/hero/Hero.css
+++ b/course-work/src/components/hero/Hero.css
@@ -2,3 +2,62 @@
   background: #fff;
   padding: 100px 0;
 }
+
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero_content {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.hero_content h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #4d4dc7;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.hero_content h1 {
+  width: 650px;
+  font-size: 3rem;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+span {
+  color: #4d4dc7;
+}
+
+.hero_content p {
+  width: 650px;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #000;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.hero_content .btn {
+  width: 200px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fff;
+  background: #4d4dc7;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn:hover {
+  background: #000;
+}
