--- a/course-work/src/App.css
+++ b/course-work/src/App.css
@@ -5,8 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  /* background: #fff; */
-  color: #111;
 }
 
 .container {
@@ -16,6 +14,7 @@
 }
 a {
   text-decoration: none;
+  color: black;
 }
 
 ul {
@@ -24,4 +23,18 @@ ul {
 
 span {
   color: #4d4dc7;
+}
+
+.btn {
+  width: 200px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fff;
+  background: #4d4dc7;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
