--- a/react-sidebar/src/App.css
+++ b/react-sidebar/src/App.css
@@ -17,3 +17,26 @@ body {
 
   background-color: #f5f5f5;
 }
+
+.side-menu {
+  position: fixed;
+  background-color: rgb(150, 146, 146);
+  width: 300px;
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 30px 20px;
+}
+
+.side-menu .top-section .logo {
+  width: 60px;
+  height: 60px;
+}
+
+.side-menu .top-section .logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.side-menu .top-section .toggle-menu-btn {
+  color: #f5f5f5;
+}
