--- a/react-sidebar/src/App.css
+++ b/react-sidebar/src/App.css
@@ -27,9 +27,15 @@ body {
   padding: 30px 20px;
 }
 
+.side-menu .top-section {
+  position: relative;
+}
+
 .side-menu .top-section .logo {
   width: 60px;
   height: 60px;
+  overflow: hidden;
+  display: inline-block;
 }
 
 .side-menu .top-section .logo img {
@@ -38,5 +44,10 @@ body {
 }
 
 .side-menu .top-section .toggle-menu-btn {
-  color: #f5f5f5;
+  color: #2b2929;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
 }
