updated the logo and the toggle button

--- a/react-sidebar/src/App.css
+++ b/react-sidebar/src/App.css
@@ -44,7 +44,7 @@ body {
 }
 
 .side-menu .top-section .toggle-menu-btn {
-  color: #2b2929;
+  color: #3b3a3a;
   font-size: 30px;
   position: absolute;
   top: 50%;
