--- a/react-sidebar/src/App.css
+++ b/react-sidebar/src/App.css
@@ -44,10 +44,39 @@ body {
 }
 
 .side-menu .top-section .toggle-menu-btn {
-  color: #3b3a3a;
+  color: #333;
   font-size: 30px;
   position: absolute;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
+}
+
+.side-menu .search-controller input[type="text"] {
+  width: 100%;
+  height: 35px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  display: block;
+  padding: 0 60px;
+  box-sizing: border-box;
+  font-size: 16px;
+  color: #999;
+  background-color: #333;
+  margin: 20px 0;
+  box-sizing: border-box;
+}
+.side-menu .search-controller {
+  position: relative;
+}
+
+.side-menu .search-controller .search-btn {
+  width: 60px;
+  height: 35px;
+  position: absolute;
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  color: #fff;
 }
