--- a/react-website/src/index.css
+++ b/react-website/src/index.css
@@ -2,3 +2,22 @@
   padding: 0;
   margin: 0;
 }
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;
+  color: white;
+  padding: 1rem;
+}
+
+nav a {
+  color: #333;
+  text-decoration: none;
+  margin: 0 1rem;
+}
+
+nav a.active {
+  font-weight: bold;
+}
