--- a/react-website/src/index.css
+++ b/react-website/src/index.css
@@ -8,7 +8,7 @@ nav {
   justify-content: center;
   align-items: center;
   background-color: #eee;
-  color: white;
+  color: #ffffff;
   padding: 1rem;
 }
 
