--- a/nav/src/components/nav-1/Navbar.css
+++ b/nav/src/components/nav-1/Navbar.css
@@ -1,10 +1,15 @@
-nav {
+header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #1b2430;
   padding: 20px 80px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.06);
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #navbar {
@@ -42,6 +47,44 @@ nav {
   left: 20px;
 }
 
-#mobile i {
-  color: #fff;
+i {
+  color: #17cf97;
+  font-size: 1.8rem;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+  header i {
+    visibility: visible;
+    opacity: 1;
+  }
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #1b2430;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-100%);
+    transition: all 0.5s ease;
+  }
+
+  header nav ul {
+    flex-direction: column;
+  }
+
+  header .responsive_nav {
+    transform: translateY(0);
+  }
+  nav .nav-close {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
 }
